# ecmm428-pycart

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  border_util.py  borders.py  cartogram.py  diffusion.csv  main.py  mkdocs.yml  pyproject.toml  requirements.txt
data/Test/: square_test.geojson
data/World/: API_SP.POP.TOTL_DS2_en_csv_v2_5358404.csv
docs/: about.md  index.md  install.md  quick.md  reference.md
docs/api/: border.md  cartogram.md
pycart/: border_util.py  cartogram.py
pycart/data/Dec2020/: ukpopestimatesdec2020.csv
pycart/data/Test/: squares_pop.csv
pycart/data/World/: API_SP.POP.TOTL_DS2_en_csv_v2_5358404.csv
src/: __init__.py
src/pycart_ARundle01/: cartogram.py
src/pycart_ARundle01/data/Dec2020/: ukpopestimatesdec2020-edited.csv
