[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pycart_ARundle01"
version = "0.1.4"
authors = [
    {name="Alex Rundle", email="alexrundle01@gmail.com"},
]
description = "A Python package for generating Cartograms using GeoDataFrames."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: Microsoft :: Windows :: Windows 10",
]

[project.urls]
"Homepage" = "https://github.com/ARundle01/ecmm428-pycart"
"Bug Tracker" = "https://github.com/ARundle01/ecmm428-pycart/issues"