[tool.poetry]
name = "pycart"
version = "0.1.6"
description = "A Python package for generating Cartograms using GeoDataFrames."
authors = ["Alex Rundle <alexrundle01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.12"
matplotlib = "3.7.1"
geopandas = "0.12.2"
geojson = "3.0.1"
numpy = "1.24.2"
libpysal = "4.7.0"
shapely = "2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
